--- a/src/styles.css
+++ b/src/styles.css
@@ -12,22 +12,24 @@ h1 {
   font-weight: 100;
   line-height: 28px;
   margin: 0;
+  margin-bottom: 20px;
   text-align: center;
 }
 
-h5 {
-  text-align: center;
-  font-size: 15px;
-}
 ul {
   padding: 0;
-  margin-bottom: 10px;
+  margin-top: 35px;
+  margin-left: 50px;
 }
 li {
   list-style-type: none;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 100;
   line-height: 1.3;
+}
+
+li:first-letter {
+  text-transform: capitalize;
 }
 
 a {
@@ -39,33 +41,53 @@ a:hover {
   color: #142d4c;
 }
 
-.weatherApp {
-  border: 1px solid #142d4c;
-  padding: 15px 15px 100px 15px;
-  margin: auto;
+.weather-app-wrapper {
   max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  border: 1px solid #142d4c;
+  padding: 20px;
   border-radius: 5px;
-  backdrop-filter: blur(15px);
   margin-top: 50px;
 }
 
 .row {
-  text-align: center;
+  margin-top: 20px;
 }
 
 .temperature {
   position: relative;
-  top: 6px;
-  font-size: 46px;
+  top: 10px;
+  font-size: 64px;
   font-weight: 100;
-  line-height: 64px;
+  line-height: 1;
   margin: 0.5;
+}
+
+.weather-temperature img {
+  margin-right: 10px;
+  margin-top: 5px;
+  height: 64px;
+  width: 64px;
 }
 
 .units {
   position: relative;
-  top: -16px;
+  top: -24px;
+}
+
+#celsius {
   text-decoration: none;
+}
+
+#farenheit {
+  text-decoration: none;
+}
+
+a {
+  text-decoration: underline;
 }
 
 .weather-icon {
@@ -107,13 +129,4 @@ a:hover {
 
 #city-form {
   margin-left: 30%;
-}
-
-#source {
-  text-align: center;
-  font-size: 14px;
-}
-
-a.underlined {
-  text-decoration: underline;
 }
