--- a/src/styles.css
+++ b/src/styles.css
@@ -12,20 +12,18 @@ h1 {
   font-weight: 100;
   line-height: 28px;
   margin: 0;
-  margin-bottom: 20px;
 }
 
-ul.description {
-  padding: 0;
-  margin-top: 25px;
-  margin-left: 10px;
-  text-align: left;
+.card-block {
+  list-style-type: none;
 }
+
 li.description {
   list-style-type: none;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 100;
   line-height: 1.3;
+  text-align: left;
 }
 
 li:first-letter {
@@ -34,6 +32,7 @@ li:first-letter {
 
 a {
   color: #589aeb;
+  text-decoration: underline;
 }
 
 a:hover {
@@ -41,7 +40,6 @@ a:hover {
 }
 
 #city-input {
-  padding-left: 10px;
   font-size: 14px;
   color: #142d4c;
   line-height: 1.3;
@@ -63,6 +61,7 @@ a:hover {
 .weather-app {
   border: 1px solid #142d4c;
   padding: 20px;
+  padding-top: 0px;
   border-radius: 5px;
   margin-top: 50px;
 }
@@ -83,7 +82,7 @@ a:hover {
 .weather-temperature img {
   position: relative;
   margin-right: 5px;
-  margin-top: 20px;
+  margin-top: 10px;
   height: 64px;
   width: 64px;
 }
@@ -91,10 +90,6 @@ a:hover {
 .units {
   position: relative;
   top: -24px;
-}
-
-a {
-  text-decoration: underline;
 }
 
 #celsius {
@@ -105,43 +100,6 @@ a {
   text-decoration: none;
 }
 
-.weather-icon {
-  position: relative;
-  bottom: 15px;
-  height: 64px;
-  margin-right: 10px;
-}
-
-.btn {
-  border: 1;
-  line-height: 2.1;
-  padding: 0 15px;
-  font-size: 1rem;
-  text-align: center;
-  color: #142d4c;
-  border-radius: 10px;
-
-  opacity: 0.8;
-  transition: all 0.25s ease-out;
-}
-
-.btn:hover {
-  background-color: #142d4c;
-  color: white;
-}
-
-.weekday {
-  font-size: 16px;
-}
-
-.icons {
-  line-height: 30px;
-  font-size: 20px;
-}
-.temperatures {
-  font-size: 13px;
-}
-
 .weather-temperature .active {
   color: #142d4c;
   cursor: default;
@@ -149,16 +107,6 @@ a {
 
 .weather-temperature .active:hover {
   text-decoration: none;
-}
-
-ul.forecast {
-  text-align: left;
-  line-height: 1.3;
-}
-
-li {
-  list-style-type: none;
-  font-size: 14px;
 }
 
 .scrolling-wrapper {
@@ -173,4 +121,18 @@ li {
   background-color: transparent;
   border: none;
   transition: all 0.2s ease-in-out;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #fff;
 }
