--- a/src/styles.css
+++ b/src/styles.css
@@ -58,14 +58,15 @@ a:hover {
 .weather-app-wrapper {
   max-width: 600px;
   margin: 20px auto;
+  margin-bottom: 20px;
 }
 
 .weather-app {
   border: 1px solid #142d4c;
   padding: 10px;
-  padding-top: 30px;
+  padding-top: 20px;
   border-radius: 10px;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .row {
