--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,26 @@ a:hover {
   color: #142d4c;
 }
 
-#city-input {
+.input-container {
+  margin: 0 auto;
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70%;
+  margin-bottom: 15px;
+  margin-top: 25px;
+}
+
+.icon {
+  position: absolute;
+  right: -10px;
+  padding: 10px;
+  background: transparent;
+  color: grey;
+  min-width: 50px;
+}
+
+.input-field {
   font-size: 16px;
   color: #142d4c;
   line-height: 1;
@@ -51,8 +70,9 @@ a:hover {
   background-position: 95% 80%;
   width: 100%;
   padding: 10px;
-  margin-left: -5px;
+  padding-left: 15px;
   cursor: auto;
+  outline: none;
 }
 
 .weather-app-wrapper {
@@ -134,4 +154,11 @@ a:hover {
   );
   border: none;
   border-radius: 10px;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
 }
