--- a/src/styles.css
+++ b/src/styles.css
@@ -83,7 +83,8 @@ a:hover {
 }
 
 .weather-app {
-  border: 1px solid #142d4c;
+  border: 1px solid transparent;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 10px;
   padding-top: 20px;
   border-radius: 10px;
